--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script language="javascript">
+      if (window.location.host === 'tdesign.tencent.com') {
+        const aegis = new Aegis({
+          id: 'rDISNMyXgqWDFPyHMB', // 项目ID，即上报key
+          reportAssetSpeed: true, // 静态资源测速
+        });
+      }
+    </script>
   </body>
+  
+  <script>
+    window.global = window;
+  </script>
 </html>
