--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TDesign Vue Next Starter</title>
   </head>
   <body>
+    <td-stats></td-stats>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script language="javascript">
